--- a/app/index.html
+++ b/app/index.html
@@ -9,11 +9,12 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@3.19.0/dist/tabler-icons.min.css"
+      href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@3.29.0/dist/tabler-icons.min.css"
     />
     <script>
       window.USE_FALLBACK_ANCHOR = true;
     </script>
+    <style></style>
   </head>
   <body>
     <div id="root"></div>
